Modify files        modified:   .env         modified:   DB/SQL/triggers.sql         modified:   config/dist/passportConfig.dev.js         modified:   config/passportConfig.js         modified:   dist/server.dev.js         modified:   func_schemas/dist/validateFunction.dev.js         modified:   func_schemas/validateFunction.js         modified:   models/UserModel.js         modified:   models/dist/UserModel.dev.js         modified:   node_modules/.package-lock.json         modified:   package-lock.json         modified:   package.json         modified:   routes/authRouter.js         modified:   routes/dist/authRouter.dev.js         modified:   routes/dist/userRouter.dev.js         modified:   routes/userRouter.js         modified:   server.js         modified:   swaggerLog.json         modified:   utils/dist/ensureToken.dev.js         modified:   utils/dist/generateAuthToken.dev.js         modified:   utils/dist/refreshToken.dev.js         modified:   utils/ensureToken.js         modified:   utils/generateAuthToken.js         deleted:    utils/generateRefreshToken.js         deleted:    utils/refreshToken.js
