# swaggerLog.json
@@ -112,7 +112,7 @@
         "operationId": "post_register",
         "tags": ["Authentication"],
         "requestBody": {
-          "description": "Object for creating new user. Password must be at least 6 characters long. Email must match to email syntax.",
+          "description": "Object for creating new user. Password must be at least 8 characters long. Email must match to email syntax.",
           "content": {
             "application/json": {
               "schema": {
@@ -137,7 +137,7 @@
             "content": {
               "text/plain": {
                 "example": {
-                  "token": "User created.Token was created."
+                  "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImNoZWNrX3JlZ2lzdGVyMkBleGFtcGxlLmNvbSIsInBhc3N3b3JkIjoiJDJhJDA5JHRWUXpzVGxiTWkvLldTUmpiLmJpRy5vMDF4WXhaSk1senE5b1dLODEzRmhlaHE5UHV0dzIyIiwiaWF0IjoxNjY3OTMzODIxfQ.Qo8Vqt7ElcMD8rf-ayM5lMWGmcFd2ywtCszNukRwoLs"
                 }
               }
             }
@@ -310,7 +310,7 @@
         "tags": ["Users"],
         "responses": {
           "200": {
-            "description": "Object is containing user info.",
+            "description": "Object is containing user info by id.",
             "content": {
               "application/json": {
                 "schema": {
@@ -344,7 +344,7 @@
           {
             "name": "userId",
             "in": "path",
-            "description": "The id of the user.",
+            "description": "The email of the user to update.",
             "required": true,
             "schema": {
               "type": "integer"
@@ -374,7 +374,9 @@
             "description": "Successful update response",
             "content": {
               "text/plain": {
-                "example": "Update is successful"
+                "example": {
+                  "email": "check_registration@example.com"
+                }
               }
             }
           },
@@ -400,7 +402,7 @@
           {
             "name": "userId",
             "in": "path",
-            "description": "The id of the user.",
+            "description": "Delete id of the user.",
             "required": true,
             "schema": {
               "type": "integer"
@@ -889,50 +891,7 @@
         }
       }
     },
-    "/api/orders/create": {
-      "post": {
-        "summary": "Creates a new order.",
-        "description": "This path create an  order for your account.",
-        "operationId": "post_orders",
-        "tags": ["Orders"],
-        "responses": {
-          "200": {
-            "description": "Created order object sent in an array.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OrdersAll"
-                },
-                "example": [
-                  {
-                    "id": 3,
-                    "user_id": 22,
-                    "status": "PENDING",
-                    "created_at": "2022-05-18T15:41:11.354Z",
-                    "modified": "2022-05-24T18:15:40.269Z",
-                    "total_price": "$712,500.00"
-                  },
 
-                  "..."
-                ]
-              }
-            }
-          },
-          "400": {
-            "description": "No order created.",
-            "content": {
-              "text/plain": {
-                "examples": {
-                  "Error": {
-                    "value": "No order created."
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/api/orders": {
       "get": {
         "summary": "Get all orders.",
@@ -1015,7 +974,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/orderId"
+                  "$ref": "#/components/schemas/OrdersAll"
                 },
                 "example": {
                   "id": 4,
@@ -1291,18 +1250,25 @@
           "user_id": {
             "type": "integer"
           },
-          "total_price": {
-            "type": "string"
-          },
           "status": {
             "type": "string"
           },
           "created": {
             "type": "string"
           },
+          "total_price": {
+            "type": "string"
+          },
           "modified": {
             "type": "string"
-          }
+          },
+          "products": [
+            {
+              "order_items": "string",
+              "product_id": "string",
+              "quantity": "number"
+            }
+          ]
         }
       },
       "Payment": {
